added more colonization plots

--- a/scratch/050525_e0029_initial_analysis.Rmd
+++ b/scratch/050525_e0029_initial_analysis.Rmd
@@ -641,9 +641,118 @@ postantibiotic64_plot <- plot_grid(
 # Display
 postantibiotic64_plot
 
-
 ```
 
 
 
 **NOTE! CHECK OUT PATCHWORK PACKAGE**
+
+
+**Get species richness for each community**
+
+```{r}
+
+theme_set(theme_cowplot())
+
+# Create recipient richness dataset
+recipient_richness <- recipient_ASVs %>%
+  filter(biosample1 != "blank") %>% 
+  select(biosample1, OTU) %>%
+  distinct() %>%
+  dplyr::count(biosample1, name = "species_richness")  %>% # count the distinct OTUs
+  mutate(community = "recipient", 
+         day = as.integer(str_extract(biosample1, "\\d{2}$"))) %>%
+  rename(sample = biosample1)
+
+
+
+# Create mixture richness dataset
+mixture_richness <- mixture_ASVs %>%
+  filter(biosample2 %in% single_donor_ASVs$biosample1) %>%
+  select(mixture, OTU) %>%
+  distinct() %>%
+  dplyr::count(mixture, name = "species_richness") %>% #count the distinct OTUs
+  mutate(community = "mixture", 
+         day = as.integer(str_extract(mixture, "\\d{2}$"))) %>%
+  rename(sample = mixture)
+
+
+# Join richness datasets together to plot
+combined_richness <- bind_rows(recipient_richness, mixture_richness)
+
+
+# Plot
+richness_day_plot <- 
+  ggplot(combined_richness, aes(x = factor(day), y = species_richness, fill = community)) +
+  geom_boxplot(outlier.shape = NA, alpha = 0.8, color = "black", width = 0.6) +
+  geom_jitter(position = position_jitterdodge(jitter.width = 0.2), size = 1, alpha = 0.6) +
+  labs(
+    title = "Change in Species Richness Pre- and Post-Abx",
+    x = "Day",
+    y = "Species Richness",
+    fill = "Community Type"
+  )
+
+
+richness_day_plot
+
+
+```
+
+
+### How does the recipient's species richness compare to the number of colonizers in the mixture?
+
+
+```{r}
+
+
+# we need the colonization_results and the recipient_richness datasets. From there, we have to join them by biosample1 
+
+total_colonization <- colonization_results %>% 
+  group_by(mixture) %>% 
+  summarize(total_colonizers = sum(colonizer)) %>% 
+  mutate(recipient = str_sub(mixture, -7, -1))
+
+combined_richness <- left_join(total_colonization, recipient_richness,
+  by = c("recipient" = "sample") # match recipient to sample
+) %>% 
+  select(-community)  %>% 
+  mutate(recipient = str_sub(recipient, -7, -5))
+  
+
+
+colonization_richness_plot <- combined_richness %>% 
+  ggplot(aes(x = species_richness, y = total_colonizers, color = factor(day))) + 
+  geom_point() +
+  geom_text_repel(aes(label = recipient), size = 2)
+
+
+```
+
+
+**Boxplots of total colonizers by mixture and day**
+
+
+```{r}
+
+total_colonization <- colonization_results %>% 
+  group_by(mixture) %>% 
+  summarize(total_colonizers = sum(colonizer)) %>% 
+  mutate(day = str_sub(mixture, -2))
+
+
+# Plot
+richness_day_plot <- 
+  ggplot(total_colonization, aes(x = factor(day), y = total_colonizers, fill = factor(day))) +
+  geom_boxplot() +
+  geom_jitter(position = position_jitterdodge(jitter.width = 0.2), size = 1, alpha = 0.6) +
+  labs(
+    title = "Number of Colonizers per Mixture by Day",
+    x = "Day",
+    y = "Number of colonizers"
+  )
+
+```
+
+
+
